AgriTrust: Clean up non-food-safety features and add Pera Wallet integration for TestNet

--- a/projects/frontend/.algokit.toml
+++ b/projects/frontend/.algokit.toml
@@ -7,6 +7,6 @@ name = 'OnChain-Counter-frontend'
 artifacts = "src/contracts"
 
 [project.run]
-build = { commands = ['pnpm run build'], description = 'Build frontend' }
-test = { commands = ['pnpm run test'], description = 'Run frontend tests' }
-lint = { commands = ['pnpm run lint'], description = 'Lint frontend code' }
+build = { commands = ['npm run build'], description = 'Build frontend' }
+test = { commands = ['npm run test'], description = 'Run frontend tests' }
+lint = { commands = ['npm run lint'], description = 'Lint frontend code' }
