--- a/projects/frontend/.env.template
+++ b/projects/frontend/.env.template
@@ -28,6 +28,11 @@ VITE_KMD_PORT=4002
 VITE_KMD_WALLET="unencrypted-default-wallet"
 VITE_KMD_PASSWORD=""
 
+# Pinata (IPFS) - Optional for MVP
+# Get your JWT from https://pinata.cloud (API Keys section)
+# Leave empty to use placeholder hashes (IPFS uploads disabled)
+# VITE_PINATA_JWT=your_pinata_jwt_token_here
+
 # # ======================
 # # TestNet configuration:
 # # uncomment below to use
